// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render default button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: #3C64F4;
  border-color: #3C64F4;
  font-weight: 600;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #0B38D9;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c0:hover:not(:active) {
  background-color: #2852EB;
}

.c0[disabled] {
  background-color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    Button
  </span>
</button>
`;

exports[`render destructive button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: #DB3643;
  border-color: #DB3643;
  font-weight: 600;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #AD0000;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #FEDBDE;
}

.c0:hover:not(:active) {
  background-color: #CC1F1F;
}

.c0[disabled] {
  background-color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    Button
  </span>
</button>
`;

exports[`render destructive disabled button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: #DB3643;
  border-color: #DB3643;
  font-weight: 600;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #AD0000;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #FEDBDE;
}

.c0:hover:not(:active) {
  background-color: #CC1F1F;
}

.c0[disabled] {
  background-color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  disabled=""
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    Button
  </span>
</button>
`;

exports[`render disabled button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: #3C64F4;
  border-color: #3C64F4;
  font-weight: 600;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #0B38D9;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c0:hover:not(:active) {
  background-color: #2852EB;
}

.c0[disabled] {
  background-color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  disabled=""
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    Button
  </span>
</button>
`;

exports[`render icon left and right button 1`] = `
.c2 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background-color: #3C64F4;
  border-color: #3C64F4;
  font-weight: 600;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #0B38D9;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c0:hover:not(:active) {
  background-color: #2852EB;
}

.c0[disabled] {
  background-color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    <svg
      aria-labelledby="bd-icon-1"
      class="c2"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
      />
    </svg>
    Button
    <svg
      aria-labelledby="bd-icon-2"
      class="c2"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
      />
    </svg>
  </span>
</button>
`;

exports[`render icon left button 1`] = `
.c2 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-left: 0.5rem;
  background-color: #3C64F4;
  border-color: #3C64F4;
  font-weight: 600;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #0B38D9;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c0:hover:not(:active) {
  background-color: #2852EB;
}

.c0[disabled] {
  background-color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    <svg
      aria-labelledby="bd-icon-1"
      class="c2"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
      />
    </svg>
    Button
  </span>
</button>
`;

exports[`render icon only button 1`] = `
.c2 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding: 0 0.5rem;
  background-color: #3C64F4;
  border-color: #3C64F4;
  font-weight: 600;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #0B38D9;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c0:hover:not(:active) {
  background-color: #2852EB;
}

.c0[disabled] {
  background-color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    <svg
      aria-labelledby="bd-icon-1"
      class="c2"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
      />
    </svg>
  </span>
</button>
`;

exports[`render icon right button 1`] = `
.c2 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: #3C64F4;
  border-color: #3C64F4;
  font-weight: 600;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #0B38D9;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c0:hover:not(:active) {
  background-color: #2852EB;
}

.c0[disabled] {
  background-color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    Button
    <svg
      aria-labelledby="bd-icon-1"
      class="c2"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
      />
    </svg>
  </span>
</button>
`;

exports[`render loading button 1`] = `
.c4 {
  height: 1rem;
  width: 1rem;
}

.c5 {
  fill: transparent;
  stroke-width: 0.125rem;
  stroke: #ECEEF5;
}

.c6 {
  fill: transparent;
  stroke-width: 0.125rem;
  stroke: #ECEEF5;
  stroke-dasharray: 43.982297150257104 43.982297150257104;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: cWvsXs 1s ease-out infinite;
  animation: cWvsXs 1s ease-out infinite;
  stroke-dashoffset: 43.982297150257104;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

.c1 {
  box-sizing: border-box;
}

.c2 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: none;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: #3C64F4;
  border-color: #3C64F4;
  font-weight: 600;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #0B38D9;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c0:hover:not(:active) {
  background-color: #2852EB;
}

.c0[disabled] {
  background-color: #D9DCE9;
}

.c7 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: hidden;
}

.c3 {
  position: absolute;
}

@media (min-width:0px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  role="button"
  tabindex="0"
>
  <div
    class="c1 c2 c3"
  >
    <svg
      class="c4"
      role="progressbar"
    >
      <circle
        class="c5"
        cx="0.5rem"
        cy="0.5rem"
        r="0.4375rem"
      />
      <circle
        class="c6"
        cx="0.5rem"
        cy="0.5rem"
        r="0.4375rem"
      />
    </svg>
  </div>
  <span
    class="c7"
  >
    Button
  </span>
</button>
`;

exports[`render secondary button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: #3C64F4;
  color: #3C64F4;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #DBE3FE;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c0:hover:not(:active) {
  background-color: #F0F3FF;
}

.c0[disabled] {
  color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    Button
  </span>
</button>
`;

exports[`render secondary destructive button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: #DB3643;
  color: #DB3643;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #FEDBDE;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #FEDBDE;
}

.c0:hover:not(:active) {
  background-color: #FFF0F1;
}

.c0[disabled] {
  color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    Button
  </span>
</button>
`;

exports[`render secondary destructive disabled button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: #DB3643;
  color: #DB3643;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #FEDBDE;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #FEDBDE;
}

.c0:hover:not(:active) {
  background-color: #FFF0F1;
}

.c0[disabled] {
  color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  disabled=""
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    Button
  </span>
</button>
`;

exports[`render secondary disabled button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: #3C64F4;
  color: #3C64F4;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #DBE3FE;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c0:hover:not(:active) {
  background-color: #F0F3FF;
}

.c0[disabled] {
  color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  disabled=""
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    Button
  </span>
</button>
`;

exports[`render subtle button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #DBE3FE;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c0:hover:not(:active) {
  background-color: #F0F3FF;
}

.c0[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    Button
  </span>
</button>
`;

exports[`render subtle destructive button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #DB3643;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #FEDBDE;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #FEDBDE;
}

.c0:hover:not(:active) {
  background-color: #FFF0F1;
}

.c0[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    Button
  </span>
</button>
`;

exports[`render subtle destructive disabled button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #DB3643;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #FEDBDE;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #FEDBDE;
}

.c0:hover:not(:active) {
  background-color: #FFF0F1;
}

.c0[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  disabled=""
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    Button
  </span>
</button>
`;

exports[`render subtle disabled button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #DBE3FE;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c0:hover:not(:active) {
  background-color: #F0F3FF;
}

.c0[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

<button
  class="c0 bd-button"
  disabled=""
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  >
    Button
  </span>
</button>
`;
